tests/good/examples/testVarAssign.grc
// Test assigning one variable to another of the same type
source := 42
dest := source // Assign int var to int var
print(dest)

s_source := "abc"
s_dest := s_source // Assign string var to string var
print(s_dest) 