tests/bad/testReassignTypeMismatchS2I.grc
// Error: Type mismatch assigning string to int
i := 100
i = "nope" // Error: Cannot assign value of type string to variable 'i' (type int)

s_val := "maybe"
i = s_val // Error: Cannot assign value of type string to variable 'i' (type int) 